Give a lazy device result no host array until something reads it
With every result staying on the device, a train-gpt-soseki step at the
book's shapes was made of the host arrays those results still allocated:
a fresh, zeroed 25-100 MB Java array per activation whether or not
anything ever read it, and the collector that had to carry them. Measured
before anything changed (`(t13 - t3) / 10`, -Xmx64g -XX:+UseParallelGC
-Xmn8g, -Xlog:gc): 6.25 s a step, of which 4.7 s were collector pauses
over a heap that grew to 58 GB before each 4 s full collection; the
arithmetic is 0.2 s of it.

A lazy result's host array is now a STUB: the [rank, dim...] header alone
on the JVM class output, an empty array on the interpreter, distinct per
result -- still the value the program holds and the identity the residency
is keyed on, so every header-only reader and every variable that captured
it are unchanged. The elements live on the device while the entry is
dirty and, from the first host touch, in a BACKING the library allocates
(DeviceResidency.storageFor) and holds weakly-keyed by the stub for as
long as the stub is reachable. Gpu.materialize and Gpu.written now ANSWER
the array to read or write, and every enumerated seam on both backends
uses the answer: the interpreter's data()/setElement, the JVM's _fvAref/
_fvAset/_fvToGeneral, the linalg: and vec: call sites, the typed loops'
hoist, the bulk sequence I/O, Java interop. A host rung that answers its
argument (the in-place members, the -into forms) is mapped back onto the
caller's object (_gpuUnswap), so the program never holds a backing beside
its stub; Java interop is the one documented hole. The library tells a
stub structurally (a result array that is exactly the prefix; an operand's
bounds are checked against its extent -- the span its entry or backing
stands for -- not its Java length).

Two things the first build got wrong, both caught by tests and both in
the kb: the bounds checks asked a.length and declined every stub; a